# NetMind-AI

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DETECTION-PIPELINE.md  ISSUES.md  LICENSE  MVP-AND-ROADMAP.md  README.md  RISK-ANALYSIS.md  docker-compose.yaml  task_plan.md
backend/: Dockerfile  Dockerfile.worker  __init__.py  config.py  main.py  pyproject.toml
backend/ai_assessor/: __init__.py  assessor.py  config.py  exceptions.py
backend/analytics/: __init__.py  base.py  schemas.py  window.py
backend/api/: __init__.py  app.py  dependencies.py  metrics.py  rate_limit.py  schemas.py
backend/contracts/: __init__.py  ai_context.py  ai_output.py  enums.py  features.py  findings.py  parser_output.py
backend/feature_extractor/: __init__.py  connection_profiles.py  constants.py  dns_profiles.py  extractor.py  flow_builder.py  ftp_summary.py  http_summary.py  smtp_summary.py  traffic_baseline.py
backend/ingestion/: __init__.py  event.py  flow_aggregator.py  stream.py
backend/live_engine/: __init__.py  adaptive_threshold.py  provider.py  service.py  streaming_engine.py  window.py
backend/migrations/: env.py
backend/protocol_parser/: __init__.py  parser.py  tshark_wrapper.py
backend/rule_engine/: __init__.py  base_rule.py  engine.py  registry.py  thresholds.py
backend/storage/: __init__.py  alert_writer.py  assessment_writer.py  database.py  disk_monitor.py  exceptions.py  flow_writer.py  lifecycle.py  live_alert_writer.py  models.py  object_store.py  packet_writer.py  rule_stats_writer.py  schemas.py  service.py  timeline_repository.py
(+175 files in other folders)
